# RFQ_Summary

./:   .gitignore  .env.example  .gitignore  README.md  payload.json  payload_multi.json  pyproject.toml  requirements.txt  setup.py
  src/rfq_summary/: llm.py  run.py  schema.py  search.py
  src/rfq_summary/parsers/: excel.py
inputs/: ex1.json  ex2.json  ex2_web.json
prompts/: pricing_estimate.md  rfq_summary.md  rfq_summary_prompt.md
src/rfq_summary/: api.py  attachments.py  config.py  glide_client.py  gsheet_logger.py  llm.py  run.py  schema.py  search.py  task.py  writer.py
src/rfq_summary.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rfq_summary/parsers/: excel.py  image.py  pdf.py
