[project]
name = "rfq-summary"
version = "0.1.0"
description = "RFQ Summary task runner: JSON + attachments -> summary. Gemini for generation, Perplexity for web search."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "tenacity>=8.3",
  "langchain-core>=0.2.35",
  "langchain-google-genai>=1.0.10",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]